# pypi-token-client

./: .gitlab-ci.yml  README.md  pyproject.toml
doc/: cli.rst  conf.py  index.rst  installation.rst  library.rst  reference.rst
doc/api/: pypi_token_client.rst
doc/api/pypi_token_client/: async_client.rst  common.rst  credentials.rst  sync_client.rst
pypi_token_client/: __init__.py  app.py  async_client.py  cli.py  common.py  credentials.py  sync_client.py  utils.py
tests/: test_against_actual_pypi.py
